<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textError"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/textError"
        android:textSize="18sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textResultado"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text=""
        android:textSize="28sp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="5">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/button1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/button2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/button3" />


        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/button4" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/button5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/button6" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/button7" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/button8" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/button9" />

        <Button
            android:id="@+id/btnSuma"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/buttonSuma" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/button0" />

        <Button
            android:id="@+id/btnResta"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/buttonResta" />

        <Button
            android:id="@+id/btnIgual"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/buttonIgual" />

    </GridLayout>

</LinearLayout>